--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -48,7 +48,7 @@ jobs:
       powerPlatformSolutionFolder: ${{ steps.DeterminePowerPlatformSolutionFolder.outputs.powerPlatformSolutionFolder }}
     steps:
       - name: Dump Workflow Information
-        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@OnlyPurgeALGoContainers
         with:
           shell: powershell
 
@@ -59,13 +59,13 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@OnlyPurgeALGoContainers
         with:
           shell: powershell
 
       - name: Read settings
         id: ReadSettings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSettings@OnlyPurgeALGoContainers
         with:
           shell: powershell
           get: type,powerPlatformSolutionFolder,useGitSubmodules
@@ -73,7 +73,7 @@ jobs:
       - name: Read submodules token
         id: ReadSubmodulesToken
         if: env.useGitSubmodules != 'false' && env.useGitSubmodules != ''
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@OnlyPurgeALGoContainers
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -94,7 +94,7 @@ jobs:
 
       - name: Determine Projects To Build
         id: determineProjectsToBuild
-        uses: spetersenms/AL-Go/Actions/DetermineProjectsToBuild@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/DetermineProjectsToBuild@OnlyPurgeALGoContainers
         with:
           shell: powershell
           maxBuildDepth: ${{ env.workflowDepth }}
@@ -107,7 +107,7 @@ jobs:
 
       - name: Determine Delivery Target Secrets
         id: DetermineDeliveryTargetSecrets
-        uses: spetersenms/AL-Go/Actions/DetermineDeliveryTargets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/DetermineDeliveryTargets@OnlyPurgeALGoContainers
         with:
           shell: powershell
           projectsJson: '${{ steps.determineProjectsToBuild.outputs.ProjectsJson }}'
@@ -115,7 +115,7 @@ jobs:
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@OnlyPurgeALGoContainers
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -123,7 +123,7 @@ jobs:
 
       - name: Determine Delivery Targets
         id: DetermineDeliveryTargets
-        uses: spetersenms/AL-Go/Actions/DetermineDeliveryTargets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/DetermineDeliveryTargets@OnlyPurgeALGoContainers
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -133,7 +133,7 @@ jobs:
 
       - name: Determine Deployment Environments
         id: DetermineDeploymentEnvironments
-        uses: spetersenms/AL-Go/Actions/DetermineDeploymentEnvironments@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/DetermineDeploymentEnvironments@OnlyPurgeALGoContainers
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
@@ -149,21 +149,21 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSettings@OnlyPurgeALGoContainers
         with:
           shell: powershell
           get: templateUrl
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@OnlyPurgeALGoContainers
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: 'ghTokenWorkflow'
 
       - name: Check for updates to AL-Go system files
-        uses: spetersenms/AL-Go/Actions/CheckForUpdates@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/CheckForUpdates@OnlyPurgeALGoContainers
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
@@ -220,7 +220,7 @@ jobs:
           path: '.artifacts'
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSettings@OnlyPurgeALGoContainers
         with:
           shell: powershell
 
@@ -229,7 +229,7 @@ jobs:
         uses: actions/configure-pages@983d7736d9b0ae728b81ab479565c72886d7745b # v5.0.0
 
       - name: Build Reference Documentation
-        uses: spetersenms/AL-Go/Actions/BuildReferenceDocumentation@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/BuildReferenceDocumentation@OnlyPurgeALGoContainers
         with:
           shell: powershell
           artifacts: '.artifacts'
@@ -256,9 +256,6 @@ jobs:
     environment:
       name: ${{ matrix.environment }}
       url: ${{ steps.Deploy.outputs.environmentUrl }}
-    env:
-      ALGoEnvSettings: ${{ vars.ALGoEnvironmentSettings }}
-      ALGoEnvName: ${{ matrix.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -269,7 +266,7 @@ jobs:
           path: '.artifacts'
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSettings@OnlyPurgeALGoContainers
         with:
           shell: ${{ matrix.shell }}
           get: type,powerPlatformSolutionFolder
@@ -283,7 +280,7 @@ jobs:
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@OnlyPurgeALGoContainers
         with:
           shell: ${{ matrix.shell }}
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -291,7 +288,7 @@ jobs:
 
       - name: Deploy to Business Central
         id: Deploy
-        uses: spetersenms/AL-Go/Actions/Deploy@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/Deploy@OnlyPurgeALGoContainers
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -303,7 +300,7 @@ jobs:
 
       - name: Deploy to Power Platform
         if: env.type == 'PTE' && env.powerPlatformSolutionFolder != ''
-        uses: spetersenms/AL-Go/Actions/DeployPowerPlatform@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/DeployPowerPlatform@OnlyPurgeALGoContainers
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -331,20 +328,20 @@ jobs:
           path: '.artifacts'
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSettings@OnlyPurgeALGoContainers
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@OnlyPurgeALGoContainers
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: '${{ matrix.deliveryTarget }}Context'
 
       - name: Deliver
-        uses: spetersenms/AL-Go/Actions/Deliver@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/Deliver@OnlyPurgeALGoContainers
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -364,7 +361,7 @@ jobs:
 
       - name: Finalize the workflow
         id: PostProcess
-        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@DeployToEnvVar
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@OnlyPurgeALGoContainers
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
