--- a/.github/workflows/NextMinor.yaml
+++ b/.github/workflows/NextMinor.yaml
@@ -30,24 +30,24 @@ jobs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
     steps:
       - name: Dump Workflow Information
-        uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@v8.0
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@alAlertsBuildModes
         with:
           shell: powershell
 
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
         with:
           lfs: true
 
       - name: Initialize the workflow
         id: init
-        uses: microsoft/AL-Go-Actions/WorkflowInitialize@v8.0
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@alAlertsBuildModes
         with:
           shell: powershell
 
       - name: Read settings
         id: ReadSettings
-        uses: microsoft/AL-Go-Actions/ReadSettings@v8.0
+        uses: spetersenms/AL-Go/Actions/ReadSettings@alAlertsBuildModes
         with:
           shell: powershell
           get: useGitSubmodules,shortLivedArtifactsRetentionDays
@@ -55,7 +55,7 @@ jobs:
       - name: Read submodules token
         id: ReadSubmodulesToken
         if: env.useGitSubmodules != 'false' && env.useGitSubmodules != ''
-        uses: microsoft/AL-Go-Actions/ReadSecrets@v8.0
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@alAlertsBuildModes
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -63,7 +63,7 @@ jobs:
 
       - name: Checkout Submodules
         if: env.useGitSubmodules != 'false' && env.useGitSubmodules != ''
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
         with:
           lfs: true
           submodules: ${{ env.useGitSubmodules }}
@@ -77,7 +77,7 @@ jobs:
 
       - name: Determine Projects To Build
         id: determineProjectsToBuild
-        uses: microsoft/AL-Go-Actions/DetermineProjectsToBuild@v8.0
+        uses: spetersenms/AL-Go/Actions/DetermineProjectsToBuild@alAlertsBuildModes
         with:
           shell: powershell
           maxBuildDepth: ${{ env.workflowDepth }}
@@ -132,11 +132,11 @@ jobs:
     runs-on: [ windows-latest ]
     steps:
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
 
       - name: Finalize the workflow
         id: PostProcess
-        uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v8.0
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@alAlertsBuildModes
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
